--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         </nav>
         <section id="about" class="about text-secondary">
             <h1>Renowacje pokryć dachowych</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo sint dignissimos rem nostrum,
-                natus ut repellendus illum facilis, accusantium delectus pariatur ullam inventore vero incidunt cum
-                reprehenderit eius. Debitis!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, impedit. Magni quibusdam eum, fugiat
+                debitis labore provident nulla doloremque veritatis velit vel placeat voluptatibus nobis accusamus
+                incidunt facere consectetur alias quae tenetur, atque recusandae similique fuga totam tempora culpa?
+                Quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, libero.</p>
             <a href="#contact" class="btn btn-light"><i class="fa-solid fa-phone"></i>
                 Skontaktuj się z nami</a>
         </section>
@@ -40,6 +41,7 @@
     <main>
         <!-- Offer: icons -->
         <section id="offer" class="icons">
+            <h2>Co robimy?</h2>
             <div class="flex-items">
                 <div>
                     <div class="icon">
@@ -81,7 +83,8 @@
         </section>
 
         <!-- Experience: flex-columns -->
-        <section id="experience" class="experience">
+        <section id="experience" class="experience bg-light">
+            <h2>Nasze realizacje</h2>
 
             <div class="flex-columns">
                 <div class="row">
@@ -141,7 +144,87 @@
         <section id="tips">
         </section>
 
-        <section id="contact">
+        <section id="contact" class="contact">
+            <h2>Skontaktuj się z nami</h2>
+
+            <div class="flex-columns">
+                <div class="row">
+
+                    <div class="column">
+                        <div class="column-form">
+
+                            <!-- <div> -->
+                                <form action="" class="contact-form">
+                                    <div class="form-control">
+                                        <label for="name">Imię i nazwisko</label>
+                                        <input type="text" name="name" id="name" placeholder="Wpisz imię i nazwisko">
+                                    </div>
+
+                                    <div class="form-control">
+                                        <label for="email">E-mail</label>
+                                        <input type="email" name="email" id="email" placeholder="Wpisz e-maila">
+                                    </div>
+
+                                    <div class="form-control">
+                                        <label for="phone">Telefon</label>
+                                        <input type="tel" name="phone" id="phone" placeholder="Wpisz numer telefonu">
+                                    </div>
+
+                                    <div class="form-control">
+                                        <label for="message">Twoja wiadomość</label>
+                                        <textarea name="message" id="message" cols="100" rows="10"
+                                            placeholder="Napisz do nas wiadomość"></textarea>
+                                    </div>
+                                    <input type="submit" value="Wyślij" id="submit" class="btn btn-light">
+                                </form>
+                            <!-- </div> -->
+
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="column-info">
+                            <div class="box">
+
+                                <div class="icon contact-info">
+                                    <span class="fa-stack fa-2x">
+                                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                                        <i class="fa-solid fa-phone fa-stack-1x icon-color"></i>
+                                    </span>
+                                    <a href="tel:+48100200300">
+                                        <h3>+48 100 200 300</h3>
+                                    </a>
+                                </div>
+
+                                <div class="icon contact-info">
+                                    <span class="fa-stack fa-2x">
+                                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                                        <i class="fa-solid fa-envelope fa-stack-1x icon-color"></i>
+                                    </span>
+                                    <a href="mailto:mail@gmail.com">
+                                        <h3>kontakt@powloki.pl</h3>
+                                    </a>
+                                </div>
+
+                                <div class="icon contact-info">
+                                    <span class="fa-stack fa-2x">
+                                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                                        <i class="fa-solid fa-location-dot fa-stack-1x icon-color"></i>
+                                    </span>
+                                    <a href="https://goo.gl/maps/BLy8zBc46nLBZw2j6" target="_blank">
+                                        <h3>Gdańsk, Poland</h3>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
         </section>
 
     </main>
