responsiveness and details

--- a/index.html
+++ b/index.html
@@ -3,37 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=yes">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="description"
         content="Jesteśmy firmą specjalizującą się w renowacji pokryć dachowych. Sprzedajemy farby specjalistyczne i podadzki">
-    <meta name="keywords" content="pokrycia dachowe, renowacja dachów, prace na wysokości, czyszczenie dachów">
+    <meta name="keywords" content="pokrycia dachowe, renowacja dachów, prace na wysokości, czyszczenie dachów, malowanie dachów">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>NAZWA FIRMY | Renowacja pokryć dachowych | Farby | Powłoki</title>
+    <title>POWŁOKI | Renowacje pokryć dachowych</title>
 </head>
 
 <body>
     <header class="hero">
         <nav id="navbar" class="navbar">
-            <h1 class="logo"><a href="#about">POWŁOKI</a></h1>
-
+            <div class="logo">
+                <a href="#about"><img src="img/logo-black.png" alt="logo"></a>
+            </div>
             <ul>
                 <li><a href="#offer">OFERTA</a></li>
                 <li><a href="#experience">REALIZACJE</a></li>
-                <li><a href="#tips">PORADY</a></li>
+                <!-- <li><a href="#tips">PORADY</a></li> -->
                 <li><a href="#contact">KONTAKT</a></li>
                 <!-- <li><a href="shop.html" class="btn btn-3"><i class="fa-solid fa-shop"></i>Sklep</a></li> -->
             </ul>
         </nav>
         <section id="about" class="about text-secondary">
             <h1>Renowacje pokryć dachowych</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, impedit. Magni quibusdam eum, fugiat
-                debitis labore provident nulla doloremque veritatis velit vel placeat voluptatibus nobis accusamus
-                incidunt facere consectetur alias quae tenetur, atque recusandae similique fuga totam tempora culpa?
-                Quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, libero.</p>
+            <p>Twój dach stracił swój pierwotny kolor albo chcesz go zabezpieczyć przed nagrzewaniem się? A moze dach z
+                papy przecieka lub potrzebujesz jego renowacji bez kosztów utylizacji papy? Te i inne usługi znajdziesz
+                u nas. Firma POWŁOKI to połączenie doświadczenia, fachowej wiedzy oraz zobowiązania do dostarczenia
+                klientom usług najwyższej jakości. </p>
             <a href="#contact" class="btn btn-light"><i class="fa-solid fa-phone"></i>
                 Skontaktuj się z nami</a>
         </section>
@@ -141,8 +142,8 @@
 
         </section>
 
-        <section id="tips">
-        </section>
+        <!-- <section id="tips">
+        </section> -->
 
         <section id="contact" class="contact">
             <h2>Skontaktuj się z nami</h2>
@@ -150,84 +151,103 @@
             <div class="flex-columns">
                 <div class="row">
 
-                    <div class="column">
-                        <div class="column-form">
-
-                            <!-- <div> -->
-                                <form action="" class="contact-form">
-                                    <div class="form-control">
-                                        <label for="name">Imię i nazwisko</label>
-                                        <input type="text" name="name" id="name" placeholder="Wpisz imię i nazwisko">
-                                    </div>
-
-                                    <div class="form-control">
-                                        <label for="email">E-mail</label>
-                                        <input type="email" name="email" id="email" placeholder="Wpisz e-maila">
-                                    </div>
-
-                                    <div class="form-control">
-                                        <label for="phone">Telefon</label>
-                                        <input type="tel" name="phone" id="phone" placeholder="Wpisz numer telefonu">
-                                    </div>
-
-                                    <div class="form-control">
-                                        <label for="message">Twoja wiadomość</label>
-                                        <textarea name="message" id="message" cols="100" rows="10"
-                                            placeholder="Napisz do nas wiadomość"></textarea>
-                                    </div>
-                                    <input type="submit" value="Wyślij" id="submit" class="btn btn-light">
-                                </form>
-                            <!-- </div> -->
-
-                        </div>
-                    </div>
-
-                    <div class="column">
-                        <div class="column-info">
-                            <div class="box">
-
-                                <div class="icon contact-info">
-                                    <span class="fa-stack fa-2x">
-                                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                                        <i class="fa-solid fa-phone fa-stack-1x icon-color"></i>
-                                    </span>
-                                    <a href="tel:+48100200300">
-                                        <h3>+48 100 200 300</h3>
-                                    </a>
-                                </div>
-
-                                <div class="icon contact-info">
-                                    <span class="fa-stack fa-2x">
-                                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                                        <i class="fa-solid fa-envelope fa-stack-1x icon-color"></i>
-                                    </span>
-                                    <a href="mailto:mail@gmail.com">
-                                        <h3>kontakt@powloki.pl</h3>
-                                    </a>
-                                </div>
-
-                                <div class="icon contact-info">
-                                    <span class="fa-stack fa-2x">
-                                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                                        <i class="fa-solid fa-location-dot fa-stack-1x icon-color"></i>
-                                    </span>
-                                    <a href="https://goo.gl/maps/BLy8zBc46nLBZw2j6" target="_blank">
-                                        <h3>Gdańsk, Poland</h3>
-                                    </a>
-                                </div>
+                    <div class="column column-form">
+                        <form action="" class="contact-form">
+                            <div class="form-control">
+                                <label for="name">Imię i nazwisko</label>
+                                <input type="text" name="name" id="name" placeholder="Wpisz imię i nazwisko" required minlength="3">
                             </div>
 
+                            <div class="form-control">
+                                <label for="email">E-mail</label>
+                                <input type="email" name="email" id="email" placeholder="Wpisz e-maila">
+                            </div>
+
+                            <div class="form-control">
+                                <label for="phone">Telefon</label>
+                                <input type="tel" name="phone" id="phone" placeholder="Wpisz numer telefonu">
+                            </div>
+
+                            <div class="form-control">
+                                <label for="message">Twoja wiadomość</label>
+                                <textarea name="message" id="message" cols="100" rows="10"
+                                    placeholder="Napisz do nas wiadomość" required></textarea>
+                            </div>
+                            <input type="submit" value="Wyślij" id="submit" class="btn btn-light">
+                        </form>
+                    </div>
+
+                    <div class="column column-info">
+                        <div class="box">
+
+                            <div class="icon contact-info">
+                                <span class="fa-stack fa-2x">
+                                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                                    <i class="fa-solid fa-phone fa-stack-1x icon-color"></i>
+                                </span>
+                                <a href="tel:+48100200300">
+                                    <h3>+48 100 200 300</h3>
+                                </a>
+                            </div>
+
+                            <div class="icon contact-info">
+                                <span class="fa-stack fa-2x">
+                                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                                    <i class="fa-solid fa-envelope fa-stack-1x icon-color"></i>
+                                </span>
+                                <a href="mailto:mail@gmail.com">
+                                    <h3>kontakt@powloki.pl</h3>
+                                </a>
+                            </div>
+
+                            <div class="icon contact-info">
+                                <span class="fa-stack fa-2x">
+                                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                                    <i class="fa-solid fa-location-dot fa-stack-1x icon-color"></i>
+                                </span>
+                                <a href="https://goo.gl/maps/BLy8zBc46nLBZw2j6" target="_blank">
+                                    <h3>Gdańsk, Poland</h3>
+                                </a>
+                            </div>
                         </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer bg-dark">
+        <div class="flex-columns">
+            <div class="row">
+
+                <div class="column">
+                    <div class="company">
+                        <p>
+                            Aleksandra Cwojdzińska <br>
+                            Łąkowa 60B/55 <br>
+                            80-769 Gdańsk <br>
+                            NIP: 5833484964 <br>
+                            REGON: 525993569
+                        </p>
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="social column-info">
+                        <a href="https://pl.linkedin.com/" target="_blank"><i
+                                class="fa-brands fa-linkedin fa-3x"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i
+                                class="fa-brands fa-facebook fa-3x"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i
+                                class="fa-brands fa-instagram fa-3x"></i></a>
                     </div>
                 </div>
             </div>
 
-
-
-
-        </section>
-
-    </main>
+        </div>
+        <p>Copyright &copy; 2023 Aleksandra Cwojdzińska</p>
+    </footer>
 </body>
 
 </html>
