--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="row">
 
                     <div class="column column-form">
-                        <form action="https://formsubmit.co/powloki.net@gmail.com" method="POST" class="contact-form">
+                        <form action="https://formsubmit.co/kontakt@powloki.net" method="POST" class="contact-form">
                             <div class="form-control">
                                 <label for="name">Imię i nazwisko</label>
                                 <input type="text" name="name" id="name" placeholder="Wpisz imię i nazwisko" required
@@ -180,7 +180,7 @@
                             </div>
                             <input type="submit" value="Wyślij" id="submit" class="btn btn-light">
                             <input type="hidden" name="_subject" value="Wiadomość z formularza kontaktowego">
-                            <input type="hidden" name="_next" value="https://127.0.0.1:5500/thankyou.html">
+                            <input type="hidden" name="_next" value="http://powloki.net/thankyou.html">
                         </form>
                     </div>
 
